<resources>
    <string name="app_name">가정통신문 Demo</string>
    <string name="search">검색</string>
    <string name="add_button">추가</string>
    <string name="del_button">삭제</string>
    <string name="add_class">반 추가</string>
    <string name="del_class">반 삭제</string>
    <string name="add_student">원생 추가</string>
    <string name="del_student">원생 삭제</string>
    <string name="put_name_of_class">추가할 반의 이름을 입력하세요</string>
    <string name="put_id_of_teacher">담임 교사의 ID를 입력하세요</string>
    <string name="put_name_of_student">추가할 원생의 이름을 입력하세요</string>
    <string name="put_name_of_teacher">담임 교사의 이름을 입력하세요</string>

    <string-array name="header_title">
        <item></item>
        <item>Mon</item>
        <item>Tue</item>
        <item>Wed</item>
        <item>Thu</item>
        <item>Fri</item>
    </string-array>

    <string-array name="days">
        <item>Mon</item>
        <item>Tue</item>
        <item>Wed</item>
        <item>Thu</item>
        <item>Fri</item>
    </string-array>
</resources>